welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:15: error: unclosed comment
/*	def in1020(a:Int, b:Int): Int = {
^max1020:1: error: Missing closing brace `}' assumed here
def max1020(a:Int, b:Int):Int = {
^